bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:6: error: '{' expected but 'case' found.
  case
  ^